# Super-Hearing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Ultrasonic-Super-Hearing/: CMakeLists.txt  README.md
Ultrasonic-Super-Hearing/audio_plugins/: CMakeLists.txt
Ultrasonic-Super-Hearing/audio_plugins/_UltrasonicSuperHearing_/: CMakeLists.txt  UltrasonicSuperHearing.jucer
Ultrasonic-Super-Hearing/audio_plugins/_UltrasonicSuperHearing_/src/: ParameterManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessorBase.h
Ultrasonic-Super-Hearing/audio_plugins/ultrasoniclib/: CMakeLists.txt
Ultrasonic-Super-Hearing/audio_plugins/ultrasoniclib/include/: ultrasoniclib.h
Ultrasonic-Super-Hearing/audio_plugins/ultrasoniclib/src/: ultrasonic_internal.c  ultrasonic_internal.h  ultrasoniclib.c
Ultrasonic-Super-Hearing/hardware/: UltraSonicMicArray.stl
Ultrasonic-Super-Hearing/matlab/: DoAestimation.m  matrixConvolver.m
Ultrasonic-Super-Hearing/matlab/resources_/: UltrasonicMic_IRs.mat
Underwater-Super-Hearing/: README.md
Underwater-Super-Hearing/hardware/: HydrophoneClamp_H2s  HydrophoneClamp_H2s.3dm  HydrophoneClamp_H2s.stl  HydrophoneClamp_H2s.stp
